Disable Subzero IR generation for performance testing.
This CL allows one to time Subzero's bitcode parsing without IR generation
(other than types, function declarations, and uninitialized global variables)
for performance testing.

BUG=None
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/696383004

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -79,8 +79,7 @@ def if_cond_flag(Value):
 
 # shell conditional commands.
 if_atts = [os.path.join(pydir, 'if.py')]
-if_atts_cmd = if_atts + ['--have=' + att
-                         for att in llvm2iceatts] + ['--command']
+if_atts_cmd = if_atts + ['--have=' + att for att in llvm2iceatts]
 ifl2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir' in llvm2iceatts),
                             '--command']
 iflc2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir_as_input'
