--- a/src/OpenGL/libEGL/libEGL.cbp
+++ b/src/OpenGL/libEGL/libEGL.cbp
@@ -20,6 +20,9 @@
 				<Linker>
 					<Add option="-m32" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="ln -s -f ./libEGL.so.1 ./../../../lib/Debug_x86/libEGL.so" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release x86">
 				<Option output="./../../../lib/Release_x86/libEGL.so.1" prefix_auto="0" extension_auto="0" />
@@ -38,6 +41,9 @@
 					<Add option="-s" />
 					<Add option="-m32" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="ln -s -f ./libEGL.so.1 ./../../../lib/Release_x86/libEGL.so" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Debug x64">
 				<Option output="./../../../lib/Debug_x64/libEGL.so.1" prefix_auto="0" extension_auto="0" />
@@ -54,6 +60,9 @@
 				<Linker>
 					<Add option="-m64" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="ln -s -f ./libEGL.so.1 ./../../../lib/Debug_x64/libEGL.so" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release x64">
 				<Option output="./../../../lib/Release_x64/libEGL.so.1" prefix_auto="0" extension_auto="0" />
@@ -74,6 +83,9 @@
 					<Add option="-s" />
 					<Add option="-m64" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="ln -s -f ./libEGL.so.1 ./../../../lib/Release_x64/libEGL.so" />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
