Turn off dump/emit routines when building minimal subzero.
Remove the dump/emit routines when ALLOW_DUMP=0. Also fixes some
verbosity messages to not print if ALLOW_DUMP=0. Note: emit routines
needed for emitIAS are not turned off.

BUG=None
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/686913005

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -50,13 +50,11 @@ CXX_DEFINES =
 
 ifdef MINIMAL
   OBJDIR := $(OBJDIR)+Min
-  CXX_DEFINES += -DALLOW_TEXT_ASM=0 -DALLOW_DUMP=0 -DALLOW_LLVM_CL=0 \
-                 -DALLOW_LLVM_IR=0 -DALLOW_LLVM_IR_AS_INPUT=0 \
-		 -DALLOW_DISABLE_IR_GEN=0
+  CXX_DEFINES += -DALLOW_DUMP=0 -DALLOW_LLVM_CL=0 -DALLOW_LLVM_IR=0 \
+	-DALLOW_LLVM_IR_AS_INPUT=0 -DALLOW_DISABLE_IR_GEN=0
 else
-  CXX_DEFINES += -DALLOW_TEXT_ASM=1 -DALLOW_DUMP=1 -DALLOW_LLVM_CL=1 \
-                 -DALLOW_LLVM_IR=1 -DALLOW_LLVM_IR_AS_INPUT=1 \
-		 -DALLOW_DISABLE_IR_GEN=1
+  CXX_DEFINES += -DALLOW_DUMP=1 -DALLOW_LLVM_CL=1 -DALLOW_LLVM_IR=1 \
+	-DALLOW_LLVM_IR_AS_INPUT=1 -DALLOW_DISABLE_IR_GEN=1
 endif
 
 ifdef NOASSERT
