Subzero: Add llvm-readobj to lit.cfg.
BUG= none
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/780783003

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -106,8 +106,13 @@ config.substitutions.append(('%lc2i', ' '.join(iflc2i_atts_cmd + llvm2ice_cmd
 
 config.substitutions.append(('%llvm2ice', llvm2icetool))
 
-llvmbintools = [r"\bFileCheck\b", r"\bllvm-as\b", r"\bllvm-mc\b",
-                r"\bllvm-objdump\b", r"\bnot\b", r"\bpnacl-freeze\b",
+llvmbintools = [r"\bFileCheck\b",
+                r"\bllvm-as\b",
+                r"\bllvm-mc\b",
+                r"\bllvm-objdump\b",
+                r"\bllvm-readobj\b",
+                r"\bnot\b",
+                r"\bpnacl-freeze\b",
                 r"\bpnacl-bcdis\b"]
 
 for tool in llvmbintools:
