Subzero: Disable asserts in the MINIMAL build.
BUG= none
R=kschimpf@google.com

Review URL: https://codereview.chromium.org/785583002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -49,6 +49,7 @@ endif
 CXX_DEFINES =
 
 ifdef MINIMAL
+  NOASSERT = 1
   OBJDIR := $(OBJDIR)+Min
   CXX_DEFINES += -DALLOW_DUMP=0 -DALLOW_LLVM_CL=0 -DALLOW_LLVM_IR=0 \
 	-DALLOW_LLVM_IR_AS_INPUT=0 -DALLOW_DISABLE_IR_GEN=0
