Remove TypeConverter and Module from minimal subzero build.
Removes the need to model LLVM types from the minimal subzero build.
It isn't removed from the nonminimal build because IceConverter still needs
to be able to convert LLVM types to corresponding Ice types.

Note that this CL reduces the size of Release+Min/llvm2ice (after
strip) to about 638K bytes.

BUG=None
R=jvoung@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/805943002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -108,13 +108,13 @@ SRCS = \
 	IceTargetLoweringX8632.cpp \
 	IceTimerTree.cpp \
 	IceTranslator.cpp \
-	IceTypeConverter.cpp \
 	IceTypes.cpp \
 	llvm2ice.cpp \
 	PNaClTranslator.cpp
 
 ifndef MINIMAL
-  SRCS += IceConverter.cpp
+  SRCS += IceConverter.cpp \
+	IceTypeConverter.cpp
 endif
 
 OBJS=$(patsubst %.cpp, $(OBJDIR)/%.o, $(SRCS))
