--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -120,7 +120,9 @@ endif
 OBJS=$(patsubst %.cpp, $(OBJDIR)/%.o, $(SRCS))
 
 UNITTEST_SRCS = \
-	IceELFSectionTest.cpp
+	BitcodeMunge.cpp \
+	IceELFSectionTest.cpp \
+	IceParseInstsTest.cpp
 
 UNITTEST_OBJS = $(patsubst %.cpp, $(OBJDIR)/unittest/%.o, $(UNITTEST_SRCS))
 UNITTEST_LIB_OBJS = $(filter-out $(OBJDIR)/llvm2ice.o,$(OBJS))
