Subzero: Initial implementation of multithreaded translation.
Provides a single-producer, multiple-consumer translation queue where the number of translation threads is given by the -threads=N argument.  The producer (i.e., bitcode parser) blocks if the queue size is >=N, in order to control the memory footprint.  If N=0 (which is the default), execution is purely single-threaded.  If N=1, there is a single translation thread running in parallel with the parser thread.  "make check" succeeds with the default changed to N=1.

Currently emission is also done by the translation thread, which limits scalability since the emit stream has to be locked.  Also, since the ELF writer stream is not locked, it won't be safe to use N>1 with the ELF writer.  Furthermore, for N>1, emitted function ordering is nondeterministic and needs to be recombobulated.  This will all be fixed in a follow-on CL.

The -timing option is broken for N>0.  This will be fixed in a follow-on CL.

Verbose flags are now managed in the Cfg instead of (or in addition to) the GlobalContext, due to the -verbose-focus option which wants to temporarily change the verbose level for a particular function.

TargetLowering::emitConstants() and related methods are changed to be static, so that a valid TargetLowering object isn't required.  This is because the TargetLowering object wants to hold a valid Cfg, and none really exists after all functions are translated and the constant pool is ready for emission.

The Makefile.standalone now has a TSAN=1 option to enable ThreadSanitizer.

BUG= none
R=jfb@chromium.org

Review URL: https://codereview.chromium.org/870653002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -47,6 +47,8 @@ endif
 
 # The list of CXX defines that are dependent on build parameters.
 CXX_DEFINES =
+CXX_EXTRA =
+LD_EXTRA =
 
 ifdef MINIMAL
   NOASSERT = 1
@@ -63,6 +65,12 @@ ifdef NOASSERT
 else
   ASSERTIONS =
   OBJDIR := $(OBJDIR)+Asserts
+endif
+
+ifdef TSAN
+  OBJDIR := $(OBJDIR)+TSan
+  CXX_EXTRA += -fsanitize=thread
+  LD_EXTRA += -fsanitize=thread
 endif
 
 $(info -----------------------------------------------)
@@ -85,8 +93,9 @@ CXX := CCACHE_CPP2=yes $(CCACHE) $(CLANG_PATH)/clang++
 CXXFLAGS := $(LLVM_CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -fno-rtti \
 	-fno-exceptions $(OPTLEVEL) $(ASSERTIONS) $(CXX_DEFINES) -g \
 	$(HOST_FLAGS) -Wno-error=unused-parameter \
-	-I$(LIBCXX_INSTALL_PATH)/include/c++/v1
-LDFLAGS := $(HOST_FLAGS) -L$(LIBCXX_INSTALL_PATH)/lib -Wl,--gc-sections
+	-I$(LIBCXX_INSTALL_PATH)/include/c++/v1 $(CXX_EXTRA)
+LDFLAGS := $(HOST_FLAGS) -L$(LIBCXX_INSTALL_PATH)/lib -Wl,--gc-sections \
+	$(LD_EXTRA)
 
 SRCS = \
 	assembler.cpp \
