Subzero: Use a "known" version of clang-format.
There are two problems with "make format" and "make format-diff" in
Makefile.standalone:

1. You have to make sure clang-format and clang-format-diff.py are
available in $PATH.

2. Different users may have different versions installed (even for the
same user on different machines), leading to whitespace wars.  Can't we
all just get along?

Since the normal LLVM build that Subzero depends on also exposes and
builds clang-format and friends, we might as well use it.  The
clang-format binary is found in $LLVM_BIN_PATH, and clang-format-diff.py
is found relative to $LLVM_SRC_PATH.  As long as the user's LLVM build
is fairly up to date, whitespace wars are unlikely.

Given this, there's a much higher incentive to use "make format"
regularly instead of "make format-diff".  In particular, inline comments
on variable/field declaration lists can get lined up more nicely by
looking at the entire context, rather than the small diff window.

BUG= none
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/877003003

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -157,7 +157,7 @@ $(OBJDIR)/llvm2ice: $(OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LLVM_LDFLAGS) \
                -Wl,-rpath=$(abspath $(LIBCXX_INSTALL_PATH)/lib)
 
-# TODO: Be more precise than "*.h" here and elsewhere.
+# TODO(stichnot): Be more precise than "*.h" here and elsewhere.
 $(OBJS): $(OBJDIR)/%.o: src/%.cpp src/*.h src/*.def
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
@@ -197,24 +197,18 @@ check: check-lit check-unit
 	(cd crosstest; ./runtests.sh)
 endif
 
-# TODO: Fix the use of wildcards.
-# Assumes clang-format is within $PATH.
+FORMAT_BLACKLIST =
+# Add one of the following lines for each source file to ignore.
+FORMAT_BLACKLIST += ! -name IceParseInstsTest.cpp
 format:
-	clang-format -style=LLVM -i src/*.h src/*.cpp
+	$(LLVM_BIN_PATH)/clang-format -style=LLVM -i \
+	`find . -regex '.*\.\(c\|h\|cpp\)' $(FORMAT_BLACKLIST)`
 
-# Assumes clang-format-diff.py is within $PATH, and that the
-# clang-format it calls is also within $PATH.  This may require adding
-# a component to $PATH, or creating symlinks within some existing
-# $PATH component.  Uses the one in /usr/lib/clang-format/ if it
-# exists.
-ifeq (,$(wildcard /usr/lib/clang-format/clang-format-diff.py))
-  CLANG_FORMAT_DIFF = clang-format-diff.py
-else
-  CLANG_FORMAT_DIFF = /usr/lib/clang-format/clang-format-diff.py
-endif
 format-diff:
 	git diff -U0 `git merge-base HEAD master` | \
-	$(CLANG_FORMAT_DIFF) -p1 -style=LLVM -i
+	PATH=$(LLVM_BIN_PATH):$(PATH) \
+	$(LLVM_SRC_PATH)/../clang/tools/clang-format/clang-format-diff.py \
+	-p1 -style=LLVM -i
 
 clean:
 	rm -rf llvm2ice *.o $(OBJDIR)
