Add -pedantic to Makefile.standalone to match production.
This also requires modifying the ICE_CACHELINE_BOUNDARY macro to avoid a warning about anonymous structs:

src/IceUtils.h:132:3: warning: anonymous structs are a GNU extension [-Wgnu-anonymous-struct]

BUG= none
R=jfb@chromium.org

Review URL: https://codereview.chromium.org/883983002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -92,7 +92,7 @@ CXX := CCACHE_CPP2=yes $(CCACHE) $(CLANG_PATH)/clang++
 
 CXXFLAGS := $(LLVM_CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -fno-rtti \
 	-fno-exceptions $(OPTLEVEL) $(ASSERTIONS) $(CXX_DEFINES) -g \
-	$(HOST_FLAGS) -Wno-error=unused-parameter \
+	$(HOST_FLAGS) -pedantic -Wno-error=unused-parameter \
 	-I$(LIBCXX_INSTALL_PATH)/include/c++/v1 $(CXX_EXTRA)
 LDFLAGS := $(HOST_FLAGS) -L$(LIBCXX_INSTALL_PATH)/lib -Wl,--gc-sections \
 	$(LD_EXTRA)
