--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -165,7 +165,8 @@ $(OBJDIR)/run_unittests: $(UNITTEST_OBJS) $(UNITTEST_LIB_OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LLVM_LDFLAGS) -lgtest -lgtest_main -ldl \
                -Wl,-rpath=$(abspath $(LIBCXX_INSTALL_PATH)/lib)
 
-$(UNITTEST_OBJS): $(OBJDIR)/unittest/%.o: unittest/%.cpp
+$(UNITTEST_OBJS): $(OBJDIR)/unittest/%.o: unittest/%.cpp \
+		unittest/*.h src/*.h src/*.def
 	$(CXX) -c $(CXXFLAGS) \
 		-Isrc/ \
 		-I$(LLVM_SRC_PATH)/utils/unittest/googletest/include \
