Subzero: Generate a web page showing llvm2ice size breakdown.
"make -f Makefile.standalone bloat" generates a json file containing ./llvm2ice size data, and launches google-chrome on the output.

bloat.py is taken verbatim from https://github.com/martine/bloat/blob/master/bloat.py .

webtreemap.{js,css} are taken verbatim from https://github.com/martine/webtreemap .

llvm2ice.bloat.html is adapted from https://github.com/martine/webtreemap/blob/gh-pages/demo/demo.html .

BUG= none
R=jfb@chromium.org

Review URL: https://codereview.chromium.org/917203002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -152,7 +152,7 @@ make_symlink: $(OBJDIR)/llvm2ice
 	@echo "Build Attributes:"
 	@$(OBJDIR)/llvm2ice --build-atts
 
-.PHONY: all make_symlink
+.PHONY: all make_symlink bloat
 
 # TODO(kschimpf): Fix python scripts to directly get build attributes
 # rather than generating $(OBJDIR)/llvm2ice.build_atts.
@@ -214,8 +214,13 @@ format-diff:
 	$(LLVM_SRC_PATH)/../clang/tools/clang-format/clang-format-diff.py \
 	-p1 -style=LLVM -i
 
+bloat: make_symlink
+	nm -C -S -l llvm2ice | \
+	bloat/bloat.py --nm-output=/dev/stdin syms > build/llvm2ice.bloat.json
+	@echo See Subzero size breakdown in bloat/llvm2ice.bloat.html
+
 clean:
-	rm -rf llvm2ice *.o $(OBJDIR)
+	rm -rf llvm2ice *.o $(OBJDIR) build/llvm2ice.bloat.json
 
 clean-all: clean
 	rm -rf build/
