Subzero: switch from llvm-objdump to objdump for lit tests (for LLVM merge)
After the next LLVM merge, llvm-objdump is going to lose the "--symbolize"
flag. It also sounds like llvm-objdump may at some point converge to the
objdump-style of output.

So, rather than keep updating test expectations, switch to objdump,
assuming objdump will be more stable than llvm-objdump.

Also stash the assembler/disassembler commandlines in
the run-llvm2ice.py script. In theory this will let us
tweak the commandlines more easily (one place).
In practice the test expectatations will probably need
to be adjusted if the base commandlines change though.

Bulk edit the test expectations to match objdump now.
Some of this is assisted by a python script.
Example script: https://codereview.chromium.org/928663002/

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4026
R=kschimpf@google.com, stichnot@chromium.org

Review URL: https://codereview.chromium.org/914263005

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -28,6 +28,10 @@ LIBCXX_INSTALL_PATH ?= $(shell readlink -e \
 CLANG_PATH ?= $(shell readlink -e \
 	../../../../third_party/llvm-build/Release+Asserts/bin)
 
+# The location of binutils tools (e.g., objdump).
+BINUTILS_BIN_PATH ?= $(shell readlink -e \
+	../../out/binutils_pnacl_x86_64_linux_work/binutils)
+
 HOST_ARCH ?= x86_64
 ifeq ($(HOST_ARCH),x86_64)
   HOST_FLAGS = -m64 -stdlib=libc++
@@ -80,6 +84,7 @@ $(info Using LLVM_SRC_PATH = $(LLVM_SRC_PATH))
 $(info Using LLVM_BIN_PATH = $(LLVM_BIN_PATH))
 $(info Using LIBCXX_INSTALL_PATH = $(LIBCXX_INSTALL_PATH))
 $(info Using CLANG_PATH = $(CLANG_PATH))
+$(info Using BINUTILS_BIN_PATH = $(BINUTILS_BIN_PATH))
 $(info Using HOST_ARCH     = $(HOST_ARCH))
 $(info -----------------------------------------------)
 
@@ -188,6 +193,7 @@ $(OBJDIR)/unittest: $(OBJDIR)
 
 check-lit: $(OBJDIR)/llvm2ice make_symlink
 	LLVM_BIN_PATH=$(LLVM_BIN_PATH) \
+	BINUTILS_BIN_PATH=$(BINUTILS_BIN_PATH) \
 	$(LLVM_SRC_PATH)/utils/lit/lit.py -sv tests_lit
 
 check-unit: $(OBJDIR)/run_unittests
