Subzero: Update tests and build scripts for sandboxing.
Spec2k now runs sandboxed, using all filetypes (asm, iasm, obj).

The new build-runtime.py script builds the native and sandboxed runtimes in build/runtime/ .  The various Subzero driver scripts are updated to use that.

Fixes a stack frame bug in sandboxed mode when the integrated assembler is used.  The stack adjustment for setting up a function call wasn't being rolled back for the second emitIAS() pass, so stack variables passed as arguments to the callee were being copied from the wrong stack slot.

Notes:

1. The hybrid Subzero/llc bisection debugging builds probably do not work as intended for -filetype=obj since the ELF emitter doesn't yet support -ffunction-sections.  (This was also true for non-sandboxed hybrid builds.)

2. The cross tests have not yet been adapted for testing sandboxing.  I'd prefer to first make progress on https://code.google.com/p/nativeclient/issues/detail?id=4085 in order to avoid blindly doubling the number of tests.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4079
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/944333002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -146,7 +146,7 @@ UNITTEST_OBJS = $(patsubst %.cpp, $(OBJDIR)/unittest/%.o, $(UNITTEST_SRCS))
 UNITTEST_LIB_OBJS = $(filter-out $(OBJDIR)/llvm2ice.o,$(OBJS))
 
 # Keep all the first target so it's the default.
-all: $(OBJDIR)/llvm2ice make_symlink
+all: $(OBJDIR)/llvm2ice make_symlink runtime
 
 # Creates symbolic link so that testing is easier. Also runs
 # llvm2ice to verify that the defines flags have valid values,
@@ -157,10 +157,8 @@ make_symlink: $(OBJDIR)/llvm2ice
 	@echo "Build Attributes:"
 	@$(OBJDIR)/llvm2ice --build-atts
 
-.PHONY: all make_symlink bloat
+.PHONY: all make_symlink runtime bloat
 
-# TODO(kschimpf): Fix python scripts to directly get build attributes
-# rather than generating $(OBJDIR)/llvm2ice.build_atts.
 $(OBJDIR)/llvm2ice: $(OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LLVM_LDFLAGS) \
                -Wl,-rpath=$(abspath $(LIBCXX_INSTALL_PATH)/lib)
@@ -191,6 +189,19 @@ $(OBJDIR):
 $(OBJDIR)/unittest: $(OBJDIR)
 	@mkdir -p $@
 
+RT_SRC := runtime/szrt.c runtime/szrt_ll.ll
+RT_OBJ := build/runtime/szrt_native_x8632.o build/runtime/szrt_sb_x8632.o
+
+runtime: $(RT_OBJ)
+
+# Use runtime.is.built so that build-runtime.py is invoked only once
+# even in a parallel build.
+.INTERMEDIATE: runtime.is.built
+$(RT_OBJ): runtime.is.built
+runtime.is.built: $(RT_SRC)
+	@echo ================ Building Subzero runtime ================
+	./pydir/build-runtime.py -v
+
 check-lit: $(OBJDIR)/llvm2ice make_symlink
 	LLVM_BIN_PATH=$(LLVM_BIN_PATH) \
 	BINUTILS_BIN_PATH=$(BINUTILS_BIN_PATH) \
@@ -200,10 +211,10 @@ check-unit: $(OBJDIR)/run_unittests
 	$(OBJDIR)/run_unittests
 
 ifdef MINIMAL
-check: check-lit check-unit
+check: check-lit check-unit runtime
 	@echo "Crosstests ignored, minimal build"
 else
-check: check-lit check-unit
+check: check-lit check-unit runtime
 	(cd crosstest; ./runtests.sh)
 endif
 
