--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -69,28 +69,28 @@ llvmbinpath = os.path.abspath(os.environ.get('LLVM_BIN_PATH'))
 # Find binutils tools. This is used for objdump.
 binutilsbinpath = os.path.abspath(os.environ.get('BINUTILS_BIN_PATH'))
 
-# Define the location of the llvm2ice tool.
-llvm2icetool = os.path.join(bin_root, 'llvm2ice')
-llvm2iceatts = shellcmd(' '.join([llvm2icetool, '--build-atts']),
+# Define the location of the pnacl-sz tool.
+pnacl_sz_tool = os.path.join(bin_root, 'pnacl-sz')
+pnacl_sz_atts = shellcmd(' '.join([pnacl_sz_tool, '--build-atts']),
                         echo=False).split()
 
-# Add build attributes of llvm2ice tool to the set of available features.
-config.available_features.update(llvm2iceatts)
+# Add build attributes of pnacl-sz tool to the set of available features.
+config.available_features.update(pnacl_sz_atts)
 
 def if_cond_flag(Value):
   return '--cond=true' if Value else '--cond=false'
 
 # shell conditional commands.
 if_atts = [os.path.join(pydir, 'if.py')]
-if_atts_cmd = if_atts + ['--have=' + att for att in llvm2iceatts]
-ifl2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir' in llvm2iceatts),
+if_atts_cmd = if_atts + ['--have=' + att for att in pnacl_sz_atts]
+ifl2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir' in pnacl_sz_atts),
                             '--command']
 iflc2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir_as_input'
-                                          in llvm2iceatts), '--command']
+                                          in pnacl_sz_atts), '--command']
 
-# Base command for running llvm2ice
-llvm2ice_cmd = [os.path.join(pydir, 'run-llvm2ice.py'),
-                '--llvm2ice', llvm2icetool,
+# Base command for running pnacl-sz
+pnacl_sz_cmd = [os.path.join(pydir, 'run-pnacl-sz.py'),
+                '--pnacl-sz', pnacl_sz_tool,
                 '--llvm-bin-path', llvmbinpath,
                 '--binutils-bin-path', binutilsbinpath]
 
@@ -102,13 +102,13 @@ config.substitutions.append(('%ifl', ' '.join(ifl2i_atts_cmd)))
 config.substitutions.append(('%if', ' '.join(if_atts_cmd)))
 
 # Translate LLVM source for each compiler setup.
-config.substitutions.append(('%p2i', ' '.join(llvm2ice_cmd)))
-config.substitutions.append(('%l2i', ' '.join(ifl2i_atts_cmd + llvm2ice_cmd
+config.substitutions.append(('%p2i', ' '.join(pnacl_sz_cmd)))
+config.substitutions.append(('%l2i', ' '.join(ifl2i_atts_cmd + pnacl_sz_cmd
                                               + ['--llvm'])))
-config.substitutions.append(('%lc2i', ' '.join(iflc2i_atts_cmd + llvm2ice_cmd
+config.substitutions.append(('%lc2i', ' '.join(iflc2i_atts_cmd + pnacl_sz_cmd
                                                + ['--llvm-source'])))
 
-config.substitutions.append(('%llvm2ice', llvm2icetool))
+config.substitutions.append(('%pnacl_sz', pnacl_sz_tool))
 
 llvmbintools = [r"\bFileCheck\b",
                 r"\bllvm-as\b",
@@ -150,4 +150,4 @@ def dbg(s):
 dbg('bin_root = %s' % bin_root)
 dbg('llvmbinpath = %s' % llvmbinpath)
 dbg('binutilsbinpath = %s' % binutilsbinpath)
-dbg("Build attributes = %s" % llvm2iceatts)
+dbg("Build attributes = %s" % pnacl_sz_atts)
